2.29.1 ?.6.2013
Enhancements:
 Python: added functions for changing PVP mode
 Python: for all useWith functions, the tile position does not need to be specified
Defects:

2.29.0 18.6.2013
Enhancements:
 Tibia Auto: Updated to 10.01
Defects:
 All: Fixed one source of random crashing when reading from memory soon after reading a Tibia Container

2.28.1 25.5.2013
Enhancements:
Defects:
 AutoLogin: Fixed account name and password functions

2.28.0 2.5.2013
Enhancements:
 Tibia Auto: Updated memory addresses to 9.86
 Tibia Auto: Updated TA to work with new container system(does not handle containers of item stacks yet)
Defects:
 Spellcaster: Removed "hi" message when casting manaburn spell

2.27.1 12.3.2013
Enhancements:
Defects:
 consts.xml: fixed all addresses

2.27.0 4.3.2013
Enhancements:
 Tibia Auto: updated for Tibia 9.82
 Spell Caster: Added tabbing to individual tabs
 Auto Go/Log: Added tabbing to individual tabs
Defects:
 Show map: Fixed enabling of Extended map research from saved config

2.26.6 5.2.2013
Enhancements:
Defects:
 Cavebot: Fixed the saving of several options.
 Auto Go/Log: Fixed the converting of the time string to an integer value.
Internal:
 Auto Go/Log: fixed help strings

2.26.5 27.1.2013
Enhancements:
 Cavebot & Auto looter: "Loot Custom" option is enabled by default.
 Python: readVIPEntry returns extra information regarding the 
 Python: getMemIntValue has added parameter for offsetting address by the base address.
 Tibia Auto: Sensical tabbing for all modules(except for those with multiple pages)
Defects:
 Cavebot: Fixed the process to use ladders when walking
 Anylogout: Removed the "Stop All" command from the set of commands it uses to stay logged in.
 VIP reader: fixed crashes from reading operations on the VIP list
 MapHacks: fixed writing multi-level minimap colours to Tibia's memory
 Cavebot: fixed load waypoints from minimap
 Python: Fixed readVIPEntry function
 Autogo: Fixed VIP alarms